# IBEX-desktop

./: .gitignore  README.md  package.json
scripts/: build-prototype.sh
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: account.rs  config.rs  docker.rs  keychain.rs  lib.rs  main.rs  process.rs  prompt.rs  state.rs  tray.rs
src/lib/: constants.ts
src/lib/apis/: index.ts
src/lib/components/: OnBoarding.svelte
src/lib/components/admin/: Settings.svelte
src/lib/components/admin/Evaluations/: Leaderboard.svelte
src/lib/components/admin/Settings/: Models.svelte  Tools.svelte
src/lib/components/admin/Settings/Evaluations/: ArenaModelModal.svelte
src/lib/components/chat/: Chat.svelte  ChatPlaceholder.svelte  MessageInput.svelte  Placeholder.svelte  SettingsModal.svelte
src/lib/components/chat/MessageInput/: CallOverlay.svelte
src/lib/components/chat/MessageInput/Commands/: Models.svelte
src/lib/components/chat/Messages/: ProfileImage.svelte  ResponseMessage.svelte
src/lib/components/chat/Messages/Markdown/: MarkdownTokens.svelte
src/lib/components/chat/ModelSelector/: Selector.svelte
src/lib/components/desktop-app/: Chat.svelte  Draggable.svelte  MessageInput.svelte  OptionsMenu.svelte
src/lib/components/layout/: Navbar.svelte  Sidebar.svelte
src/lib/components/layout/Sidebar/: UserMenu.svelte
src/lib/components/workspace/: Models.svelte
src/lib/components/workspace/Models/: ModelEditor.svelte
src/lib/utils/marked/: extension.ts
src/routes/: Layout.svelte
src/routes/(app)/: +layout.svelte
src/routes/(app)/workspace/models/create/: +page.svelte
src/routes/auth/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/setup/: +page.svelte
static/favicon/: site.webmanifest
