[package]
name = "ibex-desktop"
version = "0.1.0"
description = "IBEX — workplace AI assistant with native macOS interface"
authors = ["Percona"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ibex_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = ["macos-private-api", "devtools", "tray-icon"] }
tauri-plugin-opener = "2.2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2.2"
tauri-plugin-log = "2"

# IBEX additions
bollard = "0.18"                    # Docker API via Unix socket
keyring = { version = "3", features = ["apple-native"] }  # macOS Keychain
reqwest = { version = "0.12", features = ["json"] }        # HTTP client for Open WebUI API
tokio = { version = "1", features = ["full"] }             # Async runtime (process mgmt)
uuid = { version = "1", features = ["v4"] }                # Generate unique IDs
rand = "0.8"                                               # Random password generation
dirs = "5"                                                 # Home directory lookup
log = "0.4"                                                # Logging facade
futures = "0.3"                                            # Async stream utilities

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2.2"
tauri-plugin-single-instance = "2.2"

